Run scripted under correct scala version